# OpsGraph-A

./: .gitignore  LICENSE  README.md  docker-compose.dev.yml
adr/: ADR-001-hybrid-architecture.md  ADR-002-aiops-core-algorithms.md  ADR-003-agentic-execution-model.md  ADR-004-approval-gate-model.md  ADR-005-pipeline-api-authentication.md  ADR-006-postgres-persistent-storage.md
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: .gitkeep  0001_initial_schema.py  0002_recommendation_state.py  0003_indexes_hot_paths.py  0004_recommendation_transitions.py  0005_incident_signature_dedup.py
backend/src/repopulse/: __init__.py  config.py  main.py  slo.py  telemetry.py
backend/src/repopulse/anomaly/: detector.py
backend/src/repopulse/api/: actions.py  events.py  github_workflows.py  health.py  incidents.py  pipeline_auth.py  recommendations.py  slo.py
backend/src/repopulse/correlation/: engine.py
backend/src/repopulse/db/: __init__.py  base.py  engine.py
backend/src/repopulse/db/models/: __init__.py  action_history.py  anomaly.py  incident.py  normalized_event.py  raw_event.py  recommendation.py  recommendation_transition.py  workflow_usage.py
backend/src/repopulse/db/repository/: __init__.py  action_history_repo.py  anomaly_repo.py  base.py  event_repo.py  incident_repo.py  recommendation_repo.py  workflow_usage_repo.py
backend/src/repopulse/github/: __init__.py  ci_analysis.py  doc_drift.py  payloads.py  triage.py  usage.py
backend/src/repopulse/pipeline/: async_orchestrator.py  normalize.py  orchestrator.py  types.py
backend/src/repopulse/recommend/: engine.py
backend/src/repopulse/scripts/: benchmark.py  load_generator.py  replay_from_jsonl.py  scenarios.py  seed_demo.py
backend/src/repopulse/testing/: __init__.py  inmem.py
backend/tests/: _inmem_orchestrator.py  conftest.py  test_actions_api.py  test_anomaly_detector.py  test_async_orchestrator.py  test_auth_negative_paths.py  test_benchmark.py  test_body_size_limit.py  test_config.py  test_correlation.py  test_cors_safety.py  test_db_engine.py  test_db_models.py  test_db_repositories.py  test_events.py  test_github_ci_analysis.py  test_github_doc_drift.py  test_github_payloads.py  test_github_triage.py  test_github_usage.py  test_github_workflows_api.py  test_health.py  test_incidents_api.py  test_load_generator.py  test_main_lifespan.py  test_normalize.py  test_orchestrator.py  test_pipeline_e2e.py  test_recommend.py  test_recommendations_api.py  test_replay_from_jsonl.py  test_scenarios.py  test_slo.py  test_slo_api.py  test_telemetry.py  test_telemetry_instrumentation.py
backend/tests/integration/: conftest.py  test_orchestrator_integration.py  test_repo_action_history_workflow.py  test_repo_event_anomaly.py  test_repo_incident.py  test_repo_recommendation.py
backend/tests/migrations/: conftest.py  test_alembic_reversible.py  test_migration_runs_clean.py  test_offline_sql_emit.py
docs/: CONTRIBUTING.md  SETUP.md  TROUBLESHOOTING.md  agentic-workflows.md  aiops-core.md  architecture.md  dev-stack.md  ingest-idempotency.md  operations.md  preflight-checklist.md  (+5 more)
(+123 files in other folders)
