[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repopulse"
version = "1.1.0"
description = "RepoPulse AIOps backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp-proto-http>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-httpx>=0.48b0",
  "opentelemetry-instrumentation-logging>=0.48b0",
  # M2.0 storage layer (planned in docs/superpowers/plans/milestone-2.0-storage-plan.md).
  "sqlalchemy[asyncio]>=2.0",
  "psycopg[binary,pool]>=3.2",
  "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "ruff>=0.7",
  "mypy>=1.13",
  "opentelemetry-test-utils>=0.48b0",
  # M2.0 integration tests use a Postgres container managed by testcontainers.
  "testcontainers[postgres]>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/repopulse"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
files = ["src/repopulse", "tests"]
explicit_package_bases = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
  "integration: tests that use a real Postgres container (Testcontainers).",
  "e2e: end-to-end tests that drive the FastAPI app against a real DB.",
  "migration: tests that exercise Alembic migrations (upgrade/downgrade).",
  "no_docker: migration tests that run without a Docker daemon (offline SQL emit).",
]
